--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,13 @@
 name: rbws
-description: really bad web server
+description: really bad web service
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/masonfrykman/rbws
 
 environment:
   sdk: ^3.4.4
 
-# Add regular dependencies here.
 dependencies:
   mime: ^1.0.5
-  # path: ^1.8.0
 
 dev_dependencies:
   lints: ^3.0.0
-  test: ^1.24.0
