--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,10 @@ description: really bad web service (another generic http/1.1 implementation)
 version: 1.0.0
 repository: https://github.com/masonfrykman/rbws
 
+topics:
+  - http
+  - server
+
 environment:
   sdk: ^3.2.0
 
