--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,5 +14,11 @@ dependencies:
   mime: ^1.0.5
 
 dev_dependencies:
+  archive: ^3.6.1
   lints: ^3.0.0
   test: ^1.25.7
+
+platforms:
+  linux:
+  macos:
+  windows:
